Part2/02_nginx-deployment_v2_upgrade.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: justin-nginx
  labels:
    app: js-labels-nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.15.1
        resources:
          limits:
            memory: "128Mi"
            cpu: "300m"
        ports:
        - containerPort: 80
