Part2/03_nginx-deployment_v3_app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: justin-nginx
  labels:
    app: js-labels-nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx-ctn
        image: nginx:1.16.1
        resources:
          limits:
            memory: "128Mi"
            cpu: "300m"
        ports:
        - containerPort: 80
